WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
106502
Don't drop to huge tile mode if we're only slow-scrolling because of a page overlay
https://bugs.webkit.org/show_bug.cgi?id=106502
Summary
Don't drop to huge tile mode if we're only slow-scrolling because of a page o...
Tim Horton
Reported
2013-01-09 16:39:53 PST
We only use the MainThreadScrollingReason "ForcedOnMainThread" if we install a page overlay (didInstallPageOverlay), which clients can do arbitrarily. We probably should still use tile-sized tiles in this case (this will also prevent us from falling into gigantic tiles for WebKit2 find-in-page, among other things).
Attachments
no giant tiles
(1.77 KB, patch)
2013-01-09 16:42 PST
,
Tim Horton
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2013-01-09 16:40:17 PST
And the web inspector.
Tim Horton
Comment 2
2013-01-09 16:42:06 PST
Created
attachment 182012
[details]
no giant tiles
Anders Carlsson
Comment 3
2013-01-09 16:45:57 PST
Comment on
attachment 182012
[details]
no giant tiles View in context:
https://bugs.webkit.org/attachment.cgi?id=182012&action=review
> Source/WebCore/rendering/RenderLayerBacking.cpp:204 > - if (scrollingCoordinator->shouldUpdateScrollLayerPositionOnMainThread()) > + if (scrollingCoordinator->mainThreadScrollingReasons() & ~ScrollingCoordinator::ForcedOnMainThread)
I think you should explain what this does with a comment.
Tim Horton
Comment 4
2013-01-09 16:46:43 PST
(In reply to
comment #3
)
> (From update of
attachment 182012
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=182012&action=review
> > > Source/WebCore/rendering/RenderLayerBacking.cpp:204 > > - if (scrollingCoordinator->shouldUpdateScrollLayerPositionOnMainThread()) > > + if (scrollingCoordinator->mainThreadScrollingReasons() & ~ScrollingCoordinator::ForcedOnMainThread) > > I think you should explain what this does with a comment.
okiedokie.
Tim Horton
Comment 5
2013-01-09 16:51:52 PST
<
rdar://problem/12959143
>
Tim Horton
Comment 6
2013-01-09 16:52:00 PST
http://trac.webkit.org/changeset/139258
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug