Don't drop to huge tile mode if we're only slow-scrolling because of a page overlay https://bugs.webkit.org/show_bug.cgi?id=106502 <rdar://problem/12959143>

Reviewed by Simon Fraser.

We only use the MainThreadScrollingReason "ForcedOnMainThread" if WebKit2 installs
a page overlay (TiledCoreAnimationDrawingArea::didInstallPageOverlay), which clients
can cause arbitrarily.

We probably should still use default-sized tiles in this case (this will also
prevent us from falling into gigantic tiles for WebKit2 find-in-page, among other things).

* rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::adjustTileCacheCoverage):


Canonical link: https://commits.webkit.org/124707@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@139258 268f45cc-cd09-0410-ab3c-d52691b4dbfc